fix login screen button alignment

--- a/wp-content/themes/coincademy_reborn/scss/components/footer.scss
+++ b/wp-content/themes/coincademy_reborn/scss/components/footer.scss
@@ -71,7 +71,6 @@ footer .copyright div:last-child {
     /* footer */
 
     footer div:first-child {
-        text-align: center;
         padding-bottom: 40px;
     }
 
